Fix desktop heading spacing

--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -41,11 +41,8 @@
 
 .search {
   margin-left: auto;
+  padding-left: 0 !important;
   padding-right: 0 !important;
-
-  @media (max-width: @screen-sm) {
-    padding-left: 0 !important;
-  }
 }
 
 .search, .navigation, .connect {
